# velodb-tutorials

./: .gitignore
customer_facing/: Dockerfile  Dockerfile.superset  start.sh  start_superset.sh  supervisord.conf  supervisord.superset.conf
customer_facing/datagen/: datagen.py  seed_history.py  setup_schema.py
customer_facing/evidence/: .gitignore  evidence.config.yaml  package-lock.json  package.json
customer_facing/evidence/pages/: index.md
customer_facing/evidence/sources/velodb/: activity_by_plan.sql  attribution.sql  daily_activity.sql  feature_adoption.sql  hourly_activity.sql  kpis.sql  recent_conversions.sql  recent_events.sql  sankey_data.sql  (+1 more)
customer_facing/evidence/static/: live.html
customer_facing/superset/: init_superset.sh  setup_dashboard.py  setup_via_orm.py  superset_config.py
labs/customer_facing/: .env.example  README.md  TUTORIAL.md  docker-compose.yml  quick-start.sh
labs/customer_facing/datagen/: Dockerfile  continuous_datagen.py  init_postgres.sql  requirements.txt
labs/customer_facing/docs/: 01-setup.md  02-postgres-cdc.md  03-kafka-integration.md  04-superset-bi.md  05-verification.md
labs/customer_facing/flink/: Dockerfile  cdc-job.sql  flink-cdc-job.sh  start-cdc-job.sh  velodb_schema.sql
labs/customer_facing/kafka-connect/: Dockerfile  doris-sink.json
labs/customer_facing/superset/: Dockerfile  init_superset.sh  superset_config.py
observability/: .env.example  docker-compose.yaml
rag/: .env.example  Dockerfile  entrypoint.sh  pyproject.toml  sample_data.sql
rag/src/: agent.py  database.py  search.py  server.py
